# metalQwen3

./: .gitignore  CMakeLists.txt  README.md  standalone.sh
scripts/: CMakeLists.txt  README.md  actual_response_test.py  check_api_accuracy.py  comprehensive_benchmark.py  comprehensive_performance_test.py  create_test_model.py  download_qwen3_4b.py  enhanced_performance_analysis.py  final_performance_report.py  generate_performance_plots.py  quick_performance_validation.py  quick_start.sh  real_performance_test.py  setup_prompt_test.py
shaders/: attention.metal  matrix_mul.metal  quantize.metal  quantized_matmul.metal  quantized_matmul_optimized.metal  rmsnorm.metal  rope.metal  softmax.metal  swiglu.metal
src/: test_shaders.cpp
src/api/: Qwen3ApiHandler.cpp  Qwen3ApiHandler.h  qwen3_api_server.cpp
src/benchmark/: Benchmark.cpp  Benchmark.h  Qwen3Benchmark.cpp  Qwen3Benchmark.h  test_qwen3_benchmark.cpp
src/cpu/: CPUMatrixMul.cpp  CPUMatrixMul.h  Qwen3Original.cpp  Qwen3Original.h  Qwen3cOriginalEngine.cpp  Qwen3cOriginalEngine.h  qwen3_c_api.h  qwen3_original.c
src/metal/: MetalContext.cpp  MetalContext.h  MetalContext.mm.old  MetalQwen3.cpp  MetalQwen3.h
src/tokenizer/: Qwen3Tokenizer.cpp  Qwen3Tokenizer.h  Qwen3cTokenizer.cpp  Qwen3cTokenizer.h
